Integrate AssetManager with JME TextureManager. Place holder avatar geometry (just a simple static model) load mpk20 and avatar jme binary model through asset manager Picking test